--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -1,14 +1,18 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign education = data[1] | sort: 'startDate' | reverse %}
-  {% for content in education %}
+  {% assign experience = data[1]  %}
+  {% for content in experience %}
   <li class="list-group-item">
     <div class="row">
       <div class="col-xs-2 cl-sm-2 col-md-2 text-center" style="width: 75px;">
         {% if content.startDate and content.startDate!="" %}
         {% assign startDate = content.startDate | split: "-" | slice: 0,2 | join: "." %}
-        {% assign endDate   = content.endDate   | split: "-" | slice: 0,2 | join: "." | default: "Present" %}
+        {% assign endDate   = content.endDate   | split: "-" | slice: 0,2 | join: "." | default: "None" %}
+        {% if endDate!="None" %}
         {% assign date = startDate | append: " - "%}
         {% assign date = date | append: endDate %}
+        {% else %}
+        {% assign date = startDate %}
+        {% endif %}
         {% else %}
         {% assign date = null %}
         {% endif %}
@@ -34,14 +38,13 @@
         </table>
       </div>
       <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
-        <h6 class="title font-weight-bold ml-1 ml-md-4">{{content.studyType}}</h6>
+        <h6 class="title font-weight-bold ml-1 ml-md-4">{{content.role}}</h6>
         <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">{{content.institution}}</h6>
         <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic;">{{content.area}}</h6>
         <ul class="items">
           {% for item in content.courses %}
           <li>
             <span class="item">{{ item }}</span>
-            <!-- <span class="item"><a href="https://baidu.com">{{ item }}</a></span> -->
           </li>
           {% endfor %}
         </ul>
