--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,13 +43,14 @@ layout: default
 
           <!-- News -->
           {% if page.news and site.announcements.enabled -%}
-            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            <h2><a>news</a></h2>
             {%- include news.html limit=true %}
           {%- endif %}
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
+            <h2><a>selected publications</a></h2>
+            <!-- <h2>select publications</h2> -->
             {%- include selected_papers.html %}
           {%- endif %}
 
